cargo_check_final_universal_6.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
    Checking auth-core v0.1.0 (/app/crates/auth-core)
warning: unused imports: `Serialize` and `de::DeserializeOwned`
 --> crates/auth-cache/src/lib.rs:4:13
  |
4 | use serde::{de::DeserializeOwned, Serialize};
  |             ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `auth-cache` (lib) generated 1 warning (run `cargo fix --lib -p auth-cache` to apply 1 suggestion)
    Checking auth-protocols v0.1.0 (/app/crates/auth-protocols)
    Checking auth-db v0.1.0 (/app/crates/auth-db)
    Checking auth-extension v0.1.0 (/app/crates/auth-extension)
    Checking auth-audit v0.1.0 (/app/crates/auth-audit)
    Checking auth-api v0.1.0 (/app/crates/auth-api)
warning: unused import: `auth_cache::Cache`
  --> crates/auth-api/src/handlers/oidc_provider.rs:11:5
   |
11 | use auth_cache::Cache;
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `auth-api` (lib) generated 1 warning
    Checking auth-sso-platform v0.1.0 (/app)
error[E0432]: unresolved imports `auth_core::services::TokenEngine`, `auth_core::services::TokenProvider`
 --> src/bin/test_mysql.rs:1:27
  |
1 | use auth_core::services::{TokenEngine, TokenProvider};
  |                           ^^^^^^^^^^^  ^^^^^^^^^^^^^ no `TokenProvider` in `services`
  |                           |
  |                           no `TokenEngine` in `services`
  |
  = help: consider importing this struct instead:
          auth_core::prelude::token_service::TokenEngine
  = help: consider importing this trait instead:
          auth_core::prelude::token_service::TokenProvider

error[E0282]: type annotations needed
  --> src/bin/test_mysql.rs:30:9
   |
30 |     let engine = TokenEngine::new_with_stores(revoked_repo, refresh_repo).await?;
   |         ^^^^^^
...
63 |     let refresh_token = engine.issue_refresh_token(user_id, tenant_id).await?;
   |                         ------ type must be known at this point
   |
help: consider giving `engine` an explicit type
   |
30 |     let engine: /* Type */ = TokenEngine::new_with_stores(revoked_repo, refresh_repo).await?;
   |               ++++++++++++

Some errors have detailed explanations: E0282, E0432.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `auth-sso-platform` (bin "test_mysql") due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
